--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "DefaultConnecion": "server=SATHVIK\\SQLEXPRESS;database=UserManagement;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;" },
+  "jwt": {
+    "SecretKey": "7236640a-b2ef-49e4-b275-a2317692cd73",
+    "Audience": "https://localhost:7195",
+    "Issuer": "https://localhost:7195",
+    "ExpiryInMinute": 10
+  }
 }
